test/bats/tests/bad/bad_cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: gatekeeper-test-playground
  name: bad-cm
