test/bats/tests/bad/bad_http_send.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyNameHttpSend
metadata:
  name: dummy-constraint
spec:
  parameters:
    invalidName: "policy-violation"
