test/bats/tests/bad/cm_in_unlabeled_ns.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-in-unlabeled-ns
  namespace: ns-without-env-label
data:
  key: value
