test/bats/tests/bad/ignore_label_ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-test-namespace-ignored
  labels:
    admission.gatekeeper.sh/ignore: "yes"
