test/bats/tests/bad/no_dupe_cm_2.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: no-dupes-2
  namespace: gatekeeper-test-playground
  labels:
    gatekeeper: not_duplicated
