test/bats/tests/bad/bad_cm_scoped.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  namespace: gatekeeper-test-playground-scoped
  name: bad-cm-scoped
  labels:
    test.gatekeeper.sh/audit: "yes"
